--- a/number_paths/CMakeLists.txt
+++ b/number_paths/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.17)
-project(matrix_power C)
+project(number_paths C)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fopenmp")
 set(CMAKE_C_STANDARD 99)
