--- a/number_paths/CMakeLists.txt
+++ b/number_paths/CMakeLists.txt
@@ -4,4 +4,4 @@ project(number_paths C)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fopenmp")
 set(CMAKE_C_STANDARD 99)
 
-add_executable(number_path find_number_path.c)
+add_executable(number_paths find_number_path.c)
