--- a/page_rank/CMakeLists.txt
+++ b/page_rank/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.17)
 project(page_rank C)
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fopenmp -lm")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fopenmp")
 set(CMAKE_C_STANDARD 99)
 
 
